Minor position/alignment fixes

--- a/media/css/firefox/fx.less
+++ b/media/css/firefox/fx.less
@@ -80,7 +80,7 @@
         .span(4);
         img {
             position: relative;
-            right: 33px;
+            right: 45px;
             z-index: 5;
             height: 422px;
             width: 281px;
@@ -231,6 +231,8 @@
         #download-column {
             padding-top: 0;
             width: auto;
+            float: none;
+            text-align: center;
             .download-button small.download-other {
                 text-align: left;
             }
